relation/test/corpus/examples.txt
==================
R1
==================
R1 (5, 5)
1 : 2
2 : 3
3 : 4
4 : 2, 5

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)))
  (line
    (number)
    (number_list
      (number)))
  (line
    (number)
    (number_list
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number))))

==================
R2
==================
R2 (5, 5)
2 : 1, 2, 3, 4, 5
5 : 1, 2, 3, 4, 5

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)
      (number))))

==================
R3
==================
R3 (5, 5)
1 : 2, 3, 4, 5
2 : 3, 4, 5
3 : 4, 5
4 : 5

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number))))

==================
R4
==================
R4 (6, 6)
1 : 2, 4
2 : 3, 4, 6
3 : 4, 6
5 : 2, 3

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number))))

==================
R5
==================
R5 (7, 7)
1 : 1, 4, 7
2 : 2, 5
3 : 3, 6
4 : 1, 4, 7
5 : 2, 5
6 : 3, 6
7 : 1, 4, 7

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number))))

==================
R6
==================
R6 (9, 9)
1 : 2, 8
2 : 1, 3, 8
3 : 2, 4, 6, 9
4 : 3, 5, 6
5 : 4, 6
6 : 3, 4, 5, 7
7 : 6, 8, 9
8 : 1, 2, 7, 9
9 : 3, 7, 8

---

(source_file
  (header
    (identifier)
    (domain
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number)
      (number)))
  (line
    (number)
    (number_list
      (number)
      (number)
      (number))))
